--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 const menuToggleButton = document.getElementById("menu-toggle");
                 const menu = document.getElementById("menu");
 
-                // Обработчик для кнопки меню
+                // Button Menu
                 menuToggleButton.addEventListener("click", () => {
                   menu.classList.toggle("hidden"); // Show/hide menu
                 });
