--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <h2>Welcome to the Interactive Section</h2>
       
       <div class="video-section">
-        <iframe width="auto" height="auto" src="https://www.youtube.com/watch?v=vc2VLlk-MVg"
+        <iframe width="auto" height="auto" src="https://www.youtube.com/embed/vc2VLlk-MVg"
         frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
         </iframe>
 
