--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <li><a href="#" class="command-link" data-command="projects">PROJECTS</a> - view my projects</li>
               <li><a href="#" class="command-link" data-command="blog">BLOG</a> -  see my blog</li>
               <li><a href="#" class="command-link" data-command="contact">CONTACT</a> - contact information</li>
-              <li><a href="#" class="command-link" data-command="help">HELP</a> - see available commands</li>
+              <li><a href="#" class="command-link" data-command="help">HELP</a> - see commands</li>
               <li><a href="#" class="command-link" data-command="lnorms">Link</a> - legal Norms</li>
               
               <li><a href="#" class="command-link" data-command="Empty">empty link </a> -in development</li>
